# vert-desktop

./: .gitignore  eslint.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/scripts/: download-sidecars.sh
.github/workflows/: build.yml  ci.yml  pages.yml
docs/: index.html
scripts/: setup-dev-sidecars.sh
snap/: snapcraft.yaml
snap/gui/: vert-desktop.desktop
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: convert.rs  mod.rs
src/components/: ConversionPanel.tsx  FileCard.tsx  FormatDropdown.tsx  Layout.tsx  Navbar.tsx  ProgressBar.tsx  Toasts.tsx  Uploader.tsx
src/converters/: formats.ts  index.ts  types.ts
src/i18n/: index.ts
src/i18n/locales/: bs.json  de.json  el.json  en.json  es.json  fr.json  hr.json  id.json  it.json  ja.json  ko.json  pt-BR.json  tr.json  zh-CN.json  zh-TW.json
src/pages/: Convert.tsx  Home.tsx  Settings.tsx
src/store/: index.ts
tests/e2e/: basic.spec.ts
tests/unit/: formats.test.ts  setup.ts  store.test.ts
