[package]
name = "vert-desktop"
version = "0.1.0"
description = "VERT Desktop - Privacy-first file converter"
authors = ["Sikander RAVATE"]
license = "AGPL-3.0"
repository = "https://github.com/sindus/vert-desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vert_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
mime_guess = "2"
infer = "0.19"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
